Added project images.

--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,9 @@ div img {
   line-height:1.1;
   margin-bottom:60px;
 }
+.projects {
+  margin-bottom:30px;
+}
 #open_source h2 {
   margin-top:0;
 }
