Added new working gifs and copy. Needs revision.

--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ div img {
   padding-top:125px;
   margin-bottom:125px;
 }
-#open_source, #contact {
+.padded {
   margin-top:125px;
   margin-bottom:125px;
 }
