--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body,html {
 }
 .wrapper {
   background-color:#f6f7f8;
+  background-image: url('../img/crossword.png');
 }
 label {
   font-weight: normal;
