--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ a:hover {
 }
 .jumbotron {
   position:relative;
-  background: rgba(29, 32, 42, 1.0) no-repeat center bottom url('../img/ceramic2.gif');
+  background: rgba(29, 32, 42, 1.0) no-repeat center bottom url('../img/ceramic.png');
   background-size:cover;
   height:100%;
   margin:0;
