--- a/css/main.css
+++ b/css/main.css
@@ -1984,7 +1984,14 @@
     content: "\f1e2"
   }
 
-
+  ::-moz-selection {
+    background: rgba(255, 143, 119, 0.65);
+    text-shadow: none;
+  }
+  ::selection {
+    background: rgba(255, 143, 119, 0.65);
+    text-shadow: none;
+  }
   body,html {
     height:100%;
     width:100%;
@@ -2169,6 +2176,15 @@
   }
   hr {
     border-color: #ededf2;
+  }
+  .alert-thanks {
+    background-color: #f7f7f9;
+    border-color: rgba(255, 143, 119, 1.0);
+    color: rgba(30, 30, 41, 1);
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
   }
   @media (max-width: 767px) {
     #logo, #tag {
